--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 			<form action="" id="form-name">
 				<div class="col-lg-12">
 					<input
+					class="asmaa"
 						type="text"
 						class="form-control"
 						style="margin-top: 20px; margin-bottom: 20px"
